Fix header's HTML & CSS. Complete the HTML and CSS for first two parts of website for desktop version. Header is now COMPLETE with background image, top gap, & banner.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,14 +5,17 @@ body {
 	line-height: 1.4;
 	font-family: Helvetica, Sans-Serif;
 }
-header {
+nav {
 	color: white;
 	background-color: cadetblue;
 	display: flex;
 	align-items: center;
 	padding: 1rem 0;
 	justify-content: space-between;
-	
+}
+#top-gap {
+	position: relative;
+	top: 1rem;
 }
 header img {
 	height: 1.5rem;
@@ -26,16 +29,38 @@ header div {
 	display: flex;
 	align-items: center;
 }
+header {
+	height: 30rem;
+	width: 100%;
+	background-image: url("../images/glasses-bg.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
 .container {
 	max-width: 960px;
 	margin: 0 auto;
-}
-#top-gap {
-	position: relative;
-	top: 1rem;
 }
 a {
 	color: white;
 	text-decoration: none;
 	margin-right: 2rem;
+}
+.banner {
+	padding-top: 10rem;
+	height: 5rem;
+	color: black;
+}
+.banner span {
+	background-color: white;
+	padding: 1.5rem 5rem;
+	font-weight: bold;
+	font-size: 2rem;
+	line-height: 1.2;
+}
+.flexright {
+	display: flex;
+	justify-content: flex-end;
+	position: relative;
+	left: 2rem;
 }
